# ocd-tasks

./: Lib.hs  Module1v1.hs  Module1v2.hs  Module1v3.hs  Module1v7.hs  Module2v1.hs  Module2v2.hs  Module2v4567.hs  Module2v8.hs  README.md  ocd-tasks.cabal  shell.nix  stack.yaml
src/: Lib.hs  Module1v1.hs  Module1v2.hs  Module1v3.hs  Module1v7.hs  Module2v10.hs  Module2v23.hs  Module2v4567.hs  Module2v8.hs  Module2v9.hs  Module3v1.hs  Module3v10.hs  Module3v2.hs  Module3v3.hs  Module3v4.hs  Module3v5.hs  Module3v6.hs  Module3v7.hs  Module3v8.hs  Module3v9.hs  Module4.hs  Module5v1.hs  Module5v3.hs  Module5v4.hs  Module5v5.hs  Module5v6.hs  Module6v1.hs  Module6v10.hs  Module6v2.hs  Module6v3.hs  Module6v4.hs  Module6v6.hs  Module6v7.hs  Module6v8.hs  Module6v9.hs  Module7v1.hs  Module7v10.hs  Module7v11.hs  Module7v12.hs  Module7v13.hs  (+9 more)
src/Lib/: Elliptic.hs  EllipticFull.hs  Field.hs  Lattice.hs  Misc.hs  Vector.hs
