name:                ocd-tasks
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Mikhail Volkhov
maintainer:          volhovm.cs@gmail.com
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lib
                     , Lib.Field
                     , Lib.Misc
                     , Lib.Elliptic

                     , Module1v1
                     , Module1v2
                     , Module1v3
                     , Module1v7

                     , Module2v23
                     , Module2v4567
                     , Module2v8
                     , Module2v9
                     , Module2v10

                     , Module3v1
                     , Module3v2
                     , Module3v3
                     , Module3v4
                     , Module3v5
                     , Module3v6
                     , Module3v7
                     , Module3v8
                     , Module3v9
                     , Module3v10

                     , Module4

                     , Module5v1
                     , Module5v3
                     , Module5v4
                     , Module5v5
  build-depends:       base >=4.9 && <4.11
                     , bytestring >=0.10
                     , containers >= 0.5.7.1
                     , easyplot >= 1.0
                     , lens >= 4.14
                     , primes >=0.2
                     , random >= 1.1
                     , reflection
                     , text >= 1.2.2.2
                     , universum
                     , unordered-containers >= 0.2.8.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall
  default-extensions:   AllowAmbiguousTypes
                        DeriveDataTypeable
                        DeriveGeneric
                        DataKinds
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        KindSignatures
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
